# BrewController_Software

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
blink/main/: blink.c
components/ds18b20/: CMakeLists.txt
components/owb/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  brew.c  brew.h  comms.c  comms.h  config.h  http.c  http.h  main.c  mqtt.c  mqtt.h  wifi.c  wifi.h
