idf_component_register(SRCS "main.c" 
                            "owb_gpio.c" 
                            "owb.c" 
                            "owb_rmt.c" 
                            "ds18b20.c"
                            "comms.c"
                            "wifi.c"
                    INCLUDE_DIRS ".")